# jsonrpc_diesel

./: .env  Cargo.toml  README.md  down.sql  up.sql
migrations/2017-11-24-224705_jrpc/: down.sql  up.sql
migrations/2017-11-27-230215_rpcvid/: down.sql  up.sql
src/: keycap.rs  main.rs  meta.rs  models.rs  schema.rs  theapp.rs
src/api/: bye.rs  hello.rs  ins.rs  item.rs  keytable.rs  mod.rs  modval.rs  more.rs  qry.rs  sales.rs
src/midware/: diesel.rs  mod.rs  sold.rs
src/utils/: logger.rs
