[package]
name = "jrpc"
version = "0.1.0"
authors = ["SavageS <savages@savages.com>"]

[dependencies]
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-minihttp-server = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc" }
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["postgres","serde_json","chrono"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
serde_json = "1.0"
chrono =  { version = "0.4.0", features = ["serde"] }
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
serde_derive = "1.0.21"
serde = "1.0.21"
# derive_builder = "0.5.0"
